deployment/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: opa-demo
  labels:
    app: opa-demo
    app.kubernetes.io/name: opa-demo
  #annotations:
  #  proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
  #  proxy.istio.io/overrides: '{"containers":[{"name":"istio-proxy","lifecycle":{"postStart":{"exec":{"command":["pilot-agent","wait","--timeoutSeconds","360"]}}},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File","imagePullPolicy":"Always"}]}'
spec:
  type: NodePort
  selector:
    app: opa-demo
  ports:
    - name: "http-spring"
      port: 8080
      targetPort: 8080
      nodePort: 30005
    #- name: "http-opa"
    #  port: 8181
    #  targetPort: 8181
    #  protocol: TCP

---
